--- a/src/performance_tests/MultiUser_Write_PerformanceTests/README
+++ b/src/performance_tests/MultiUser_Write_PerformanceTests/README
@@ -7,7 +7,4 @@ This test is to check the performance of the system when multiple Users are tryi
 5)Every user closes the file once his write is done, so that the lease can be granted to the next user in the request queue.
 6)Plot the time required to perform write on the same file with different number of users (1 user, 5 users, 15, 20, 25 users).
 
-Expected result: To perform write on a file, each user has to grant exclusive lease on the file before starting to write and only 1
-                 user at a time can write to a file. Since while 1 user is writing on a file, all the other requesting users has to 
-                 wait for the lease, the time required to perform write on the same file should increase as the number of users 
-                 performing write increases.
+Expected result: To perform write on a file, each user has to grant exclusive lease on the file before starting to write and only 1 user at a time can write to a file. Since while 1 user is writing on a file, all the other requesting users has to wait for the lease, the time required to perform write on the same file should increase as the number of users performing write increases.
